-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 17.0.1, Qt Creator 18.0.0 (18.0 branch), Qt Creator 19.0 (master branch)
-
None
-
Linux Mint 21.3
-
b2a235491 (17.0)
It's a breaking and such an annoying change compared to Qt Creator 15.0, that I've been using before.
Now, basically, it's not possible to remove all spaces and go to the start of a line without either:
- using the mouse
- typing Backspace once per space character.
Consider example:
void foo() { while (true) { if (bar) { int qux = 1; |<- } } }
The |<- is whether the cursor is. After issuing a Ctrl+Backspace I expect the behaviour to be the same as it was in all historical versions of Qt Creator down to v1:
void foo() { while (true) { if (bar) { int qux = 1; |<- } } }
But Instead I get:
void foo() { while (true) { if (bar) { int qux = 1;|<- } } }
Please, bring back the original behavior.
I want to add that this behavior is not unique to Ctrl+Backspace. It seems that the text selection logic is broken as well: Ctrl+Shift+<Left> selects the \n in addition to spaces. While Ctrl+Shift+<Right> works as before and stops at the end of a current line.
For Gerrit Dashboard: QTCREATORBUG-33428 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
675058,3 | Utils: fix camel case left | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | -1 |
675307,2 | Utils: fix camel case left | 18.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |