Utils: fix camel case left

Amends 25a4710d70ad69727d505a7c40fdff9a2c02b0bc

Fixes: QTCREATORBUG-33428
Fixes: QTCREATORBUG-33154
Change-Id: Ic7d1d41a6bd7f393ce2a78ab6c80616f41127124
Reviewed-by: André Hartmann <aha_1980@gmx.de>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>